--- a/trunk/templates/findblog.htm
+++ b/trunk/templates/findblog.htm
@@ -11,7 +11,7 @@
   <div><b><a href="../blog/?blog={{blog.id}}">{{blog.title}}</a></b></div>
   <div>{{blog.content|truncatewords:"100"}}...</div>
   <div style="color:#666;">
-  	<span>By£º<a href="../?user={{blog.author.id}}">{{blog.author.username}}</a></span>
+  	<span>By£º<a href="../home/?user={{blog.author.id}}">{{blog.author.username}}</a></span>
 	<span>Event:<a href="../event/?event={{blog.event_id.id}}">{{blog.event_id.title}}</a></span>
 	<span>Publish Time:{{blog.publish_time}}</span>
   </div> 
