--- a/trunk/templates/findevent.htm
+++ b/trunk/templates/findevent.htm
@@ -11,7 +11,7 @@
   <div><b><a href="../event/?event={{event.id}}">{{event.title}}</a></b></div>
   <div>{{event.description}}</div>
   <div style="color:#666;">
-  	<span>By£º<a href="../?user={{event.user_id.id}}">{{event.user_id.username}}</a></span>
+  	<span>By£º<a href="../home/?user={{event.user_id.id}}">{{event.user_id.username}}</a></span>
 	<span>Progress:{{event.progress}}</span>
 	<span>Start:{{event.start_date}}</span>
 	<span>End:{{event.end_date}}</span>
