--- a/trunk/templates/index.htm
+++ b/trunk/templates/index.htm
@@ -98,7 +98,7 @@
 					  <td width="79"><input type="button" id="but_reg" onclick="javascript:window.location.href='./register';" /></td>
 					</tr>
 					<tr>
-					  <td width="20" class="font_12"><input name="auto_remember" type="checkbox"  class="sink"/></td>
+					  <td width="20" class="font_12"><input name="auto_remember" value="1" type="checkbox"  class="sink"/></td>
 					  <td width="65" class="font_12"> ×Ô¶¯µÇÂ¼</td>
 					  <td class="font_12"><a href="#">Íü¼ÇÃÜÂë£¿</a></td>
 					</tr>
