--- a/trunk/templates/base.htm
+++ b/trunk/templates/base.htm
@@ -19,6 +19,10 @@
     </div>
 
     <div id="top_search">
+	<div id="go_home">
+		<a href="../">我的首页</a> &nbsp;&nbsp;
+		<a href="../login_out">退出</a>
+	</div>
       <form method="get" action="http://localhost/search/">
         <input id="search_value" name="search_value" type="text"/>
         <select id="search_kind" name="search_kind">
