--- a/trunk/templates/friend.htm
+++ b/trunk/templates/friend.htm
@@ -1,42 +1,35 @@
 {% extends 'base_home.htm' %}
 
 {% block middle %}
-      <div id="m1">
-			<div class="title1">我的好友</div>
-			<div class="tip">搜索对方用户名，快速添加其为好友。</div>
-	        {% if friends %}
-				{% for user,hi_li in friends %}
-					<div class="each_friend" id="fr_{{user.myfriend.id}}">
-						<div class="who">
-						  <a href="../?user={{user.myfriend.id}}">
-							<img src="{{user.myfriend.userbasicinfo.headshot.url}}"/>
-						  </a>
-						  <div><a href="../?user={{user.myfriend.id}}">{{user.myfriend.username}}</a></div>
-						</div>
-						<div class="updateinfo">
-							<ul>
-							  {% for hi in hi_li %}
-							  <li><span class="time">{{hi.date}}</span>{{hi.content}}</li>
-							  {%endfor%}
-							</ul>
-						</div>
-						<form id="form{{forloop.counter}}" method="post" action="../removefriend/">
-							<input type="hidden" name="uid" value="{{user.myfriend.id}}"/>
-						</form>
-						<div class="operation">
-						  <a href="javascript:remove_friend( {{user.myfriend.id}} );">
-						  解除好友</a>
-						</div>
-					</div>
-				{% endfor %}
-			{%else %}
-				<li>暂时没加好友</li>
-			{%endif%}
-			
-			
-			
-      </div>
+<div id="m1">
+  <div class="title1">我的好友</div>
+  <div class="tip">搜索对方用户名，快速添加其为好友。</div>
+  {% if friends %}
+  {% for user,hi_li in friends %}
+  <div class="each_friend" id="fr_{{user.myfriend.id}}">
+	<div class="who">
+	  <a href="../home/?user={{user.myfriend.id}}">
+		<img src="{{user.myfriend.userbasicinfo.headshot.url}}"/>
+	  </a>
+	  <div><a href="../home/?user={{user.myfriend.id}}">{{user.myfriend.username}}</a></div>
 	</div>
-	<div class="cleaner"></div>
+	<div class="updateinfo">
+	  <ul>
+		{% for hi in hi_li %}
+		<li><span class="time">{{hi.date}}</span>{{hi.content}}</li>
+		{%endfor%}
+	  </ul>
+	</div>
+	{%if is_admin%}
+	<div class="operation">
+	  <a href="javascript:remove_friend( {{user.myfriend.id}} );">
+		解除好友</a>
+	</div>
+	{%endif%}
+  </div>
+  {% endfor %}
+  {%else %}
+  <li>暂时没加好友</li>
+  {%endif%}
 </div>
 {% endblock %}
