--- a/trunk/templates/blog.htm
+++ b/trunk/templates/blog.htm
@@ -1,39 +1,43 @@
 {% extends 'base_home.htm' %}
 {% block middle %}
-<div id="navigation">
-  <a href="../home">首页</a>->
-  <a href="../doing">正在做事件</a>->
-  <a href="../event/?event={{blog.event_id.id}}">{{blog.event_id.title}}</a>
-</div>
+<div id="navigation"> <a href="../home">首页</a>-> <a href="../doing">正在做事件</a>-> <a href="../event/?event={{blog.event_id.id}}">{{blog.event_id.title}}</a> </div>
 <div id="m1">
   <div class="title2">{{blog.title}}</div>
-  <p id="timenote">
-	{{blog.publish_time}} 
-	{%if is_admin%}| <a href="../editblog">编辑</a>&nbsp;&nbsp;<a href="#">删除</a>{%endif%}
-  </p>
+  <p id="timenote"> {{blog.publish_time}} 
+    {%if is_admin%}| <a href="../editblog">编辑</a>&nbsp;&nbsp;<a href="#">删除</a>{%endif%} </p>
   <div  id="blog_content">{{blog.content|linebreaks}}</div>
   <table width="98%" border="0" cellspacing="0" cellpadding="0" id="comment">
     <tr>
-      <td width="86%" id="comment_counter" class="dot_triright"><a href="javascript:switch_comment()" class="a_raw">共1条评论 </a></td>
-      <td width="14%"><a href="#" class="a_raw">+发表评论</a> </td>
+      <td id="comment_counter" class="dot_tridown">
+		<a href="javascript:switch_comment()" class="a_raw">共{{comments|length}}条评论 </a>
+	  </td>
     </tr>
   </table>
-  <div id="comment_body" style="display:none;">
+  <div id="comment_body" style="display:block;">
+    <input type="hidden" id="visitor_id" value="{{visitor.id}}"/>
+    <input type="hidden" id="visitor_name" value="{{visitor.username}}"/>
+	{% for comment in comments%}
     <div class="each_com">
-      <div class="com_info">
-        <table width="98%" border="0" cellspacing="0" cellpadding="0">
+      <div class="com_info" id="com_{{comment.id}}">
+        <table>
           <tr>
-            <td><a href="#">l0he1g</a> <span class="time">(11.14 14:00)</span></td>
-			{%if is_admin%}
-            <td width="7%"><a href="#">回复</a></td>
-            <td width="7%"><a href="#">删除</a></td>
-			{%endif%}
-          </tr>
+            <td><a href="../home/?user={{comment.author.id}}">{{comment.author}}</a> <span class="time">{{comment.publish_time}}</span></td>
+            {%if is_admin%}
+            <td width="7%"><a href="javascript:del_comment({{comment.id}});">删除</a></td>
+            {%endif%} </tr>
         </table>
       </div>
-      <p>关于网络认证系统的几点使用说明1．连线校园,是指访问包括研究生院在内的中科院院属各单位的网络资源，此选项不计流量费</p>
+      <p>{{comment.content}}</p>
     </div>
-	<div id=""></div>
+	{%endfor%}
+  </div>
+  <div>
+    <form action="." method="post">
+      <textarea id="write_comment" class="box_comment"></textarea>
+      <p>
+        <input type="button" value=" 提交评论 " onclick="submit_comment({{blog.id}})"/>
+      </p>
+    </form>
   </div>
 </div>
-{% endblock %}
+{% endblock %} 
