--- a/trunk/templates/base.htm
+++ b/trunk/templates/base.htm
@@ -24,7 +24,7 @@
 	  		{% block gohome %}{% endblock %}
 		{% endif %}
 	</div>
-      <form method="get" action="http://localhost/search/">
+      <form method="get" action="../search/">
         <input id="search_value" name="search_value" type="text"/>
         <select id="search_kind" name="search_kind">
           <option value="username" selected="selected">”√ªß</option>
