--- a/trunk/templates/confirm.htm
+++ b/trunk/templates/confirm.htm
@@ -1,6 +1,6 @@
 {% extends 'base.htm' %}
 {% block head %}
-  <meta http-equiv="refresh" content="5;url=http://localhost/home/" />
+  <meta http-equiv="refresh" content="5;url=../home/" />
   <link rel="stylesheet" href="/static/style/sub.css">
  {% endblock %}
 {% block content %}
