--- a/trunk/static/style/home.css
+++ b/trunk/static/style/home.css
@@ -239,6 +239,9 @@ font-weight:bold;
 	#comment_body{
 	color:#333;
 	font-size:12px;}
+	#tbody_com{
+	color:#333;
+	font-size:12px;}
 	.each_com{
 	margin-bottom:6px;
 	}
