--- a/trunk/templates/blog.htm
+++ b/trunk/templates/blog.htm
@@ -13,7 +13,7 @@
 	  </td>
     </tr>
   </table>
-  <div id="comment_body" style="display:block;">
+  <div id="tbody_com" style="display:block;">
   <!--两个记录员，主要是为了Dom方式增加评论时，显示用户名和其url-->
     <input type="hidden" id="visitor_id" value="{{visitor.id}}"/>
     <input type="hidden" id="visitor_name" value="{{visitor.username}}"/>
