--- a/trunk/templates/home.htm
+++ b/trunk/templates/home.htm
@@ -1,5 +1,9 @@
 {% extends 'base_home.htm' %}
 
+{%block js%}
+<script language="JavaScript" src="/static/js/switch.js"></script>
+{%endblock%}
+
 {% block middle %}
 <div id="m1">
   <table cellspacing="0">
