--- a/trunk/templates/base_home.htm
+++ b/trunk/templates/base_home.htm
@@ -1,10 +1,10 @@
 {% extends 'base.htm' %}
 {% block head %}
 <link rel="stylesheet" href="/static/style/home.css">
-<script language="JavaScript" src="/static/style/prototype-1.6.0.3.js"></script>
-<script language="JavaScript" src="/static/style/switch.js"></script>
-<script language="JavaScript" src="/static/style/ajax.js"></script>
-<script language="JavaScript" src="/static/style/My97DatePicker/WdatePicker.js"></script>
+<script language="JavaScript" src="/static/js/prototype.js"></script>
+<script language="JavaScript" src="/static/js/scriptaculous.js"></script>
+<script language="JavaScript" src="/static/js/ajax.js"></script>
+{% block js %}{% endblock %}
 {% endblock %}
 {% block topmenu %}
 	<ul>
