--- a/trunk/templates/event_list.htm
+++ b/trunk/templates/event_list.htm
@@ -1,6 +1,6 @@
 {% extends 'base_home.htm' %}
 {% block middle %}
-<div id="navigation"><a href="../home">首页</a>->正在做事件</div>
+<!--<div id="navigation"><a href="../home">首页</a>->正在做事件</div>-->
 <div id="m1">
   <div class="title1">
 	{%ifequal kind 'doing'%}正在做事件
