--- a/trunk/templates/base_home.htm
+++ b/trunk/templates/base_home.htm
@@ -4,6 +4,7 @@
 <script language="JavaScript" src="/static/js/prototype.js"></script>
 <script language="JavaScript" src="/static/js/scriptaculous.js"></script>
 <script language="JavaScript" src="/static/js/ajax.js"></script>
+<script language="JavaScript" src="/static/js/switch.js"></script>
 {% block js %}{% endblock %}
 {% endblock %}
 {% block topmenu %}
