--- a/trunk/templates/blogissue.htm
+++ b/trunk/templates/blogissue.htm
@@ -19,7 +19,7 @@
 					<font size=2 color=Red font-weight:normal>{{error_msg}}</font>
 					</div>
 					<div>
-					<textarea name="content";rows=60; cols=50 >{{blog.content}}</textarea>
+					<textarea name="content" rows=60 cols=50 style="height: 300px;"  >{{blog.content}}</textarea>
 					</div>
 					<div><input name="" type="button" class="but_submit" onclick="addblog()"/></div>
 				</form>
