--- a/trunk/templates/base.htm
+++ b/trunk/templates/base.htm
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html;charset=UTF-8" />
 <meta name="keywords" content="dreams,todo,SNS,干啥,实现理想">
-<title>干啥网--记录、分享我们的生活足迹!</title>
+<title>干啥网--记录、分享我们的生活足迹!(老婆，七夕快乐!)</title>
 <link rel="stylesheet" href="/static/style/index.css">
 {% block head %}{% endblock %}
 </head>
