--- a/trunk/templates/event_list.htm
+++ b/trunk/templates/event_list.htm
@@ -3,15 +3,37 @@
 <!--<div id="navigation"><a href="../home">首页</a>->正在做事件</div>-->
 <div id="m1">
   <div class="title1">
-	{%ifequal kind 'doing'%}正在做事件
-	{%else%}
+		{%ifequal kind 'all'%}所有事件&nbsp;&nbsp;&nbsp;&nbsp;
+		{%else%}
+	    {%ifequal kind 'doing'%}进行中事件
+	    {%else%}
         {%ifequal kind 'todo'%}准备做事件
 	    {%else%}已完成事件
         {% endifequal %}
-    {% endifequal %}
-</div>
+        {% endifequal %}
+		{% endifequal %}
+	<span style="font-size:12px;font-weight:normal;">
+	 &nbsp;  [<a href="/events">所有事件</a>]
+	 &nbsp;  [<a href="/doing">进行中</a>]
+	 &nbsp;  [<a href="/todo">准备做</a>]
+	 &nbsp;  [<a href="/done">已完成</a>]
+	 &nbsp;  [<a href="/addevent">新建事件</a>]
+	</span>
+  </div>
   {% if events %}
+  <table>
   {% for event in events %}
+	<tr>
+	  <td class="date_td">{{event.start_date|date:"Y.m.d"}}-{{event.end_date|date:"Y.m.d"}}</td>
+	  <td class="title_td"><a href="../event?event={{event.key}}">{{event.title}}</a></td>
+	  <td class="rate_td">
+		<div class="progressbar"><div style="width:{{event.progress}}%;"
+		class="progresskenerl"></div></div>
+	  </td>
+	</tr>
+  {%endfor%}
+  </table>
+<!--
   <div class="events" id="event_{{event_id}}">
     <table width="98%" border="0" cellspacing="0" cellpadding="0" class="tip">
       <tr>
@@ -21,12 +43,7 @@
 		  <img src="/static/images/dot_lock.gif" style="padding-left:4px;"/>
 		  {% endif %}
 		</td>
-		<!---
-		{%if is_admin%}
-        <td width="8%"><a href="javascript:del_event( {{event.id}})">删除</a></td>
-		{%endif%}
-		-->
-      </tr>
+     </tr>
     </table>
     <table width="98%" border="0" cellspacing="0" cellpadding="0">
       <tr>
@@ -43,7 +60,7 @@
       </tr>
     </table>
   </div>
-  {%endfor%}
+-->
   {%else%}
   <br />
   <p>没有该类事件。</p>
